style sup/sub & fix li element font-sizes on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -214,6 +214,12 @@ mark {
 	background: var(--info);
 }
 
+sup,
+sub {
+	font-size: 0.667em;
+	font-style: italic;
+}
+
 img {
 	max-width: 80%;
 	height: auto;
@@ -1000,8 +1006,8 @@ article a[target='_blank'][href^='#']::after {
 	article ol {
 		padding-left: 1em;
 	}
-	article ul li:first-of-type,
-	article ol li:first-of-type,
+	article ul li,
+	article ol li,
 	article ul li p,
 	article ol li p {
 		font-size: 18px;
